--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   "dependencies": {
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-stopwatch": "2.0.4"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "12.1.1",
