--- a/package.json
+++ b/package.json
@@ -26,14 +26,21 @@
     ]
   },
   "dependencies": {
+    "@prisma/client": "2.22.1",
+    "cookies": "0.8.0",
+    "js-cookie": "2.2.1",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
+    "@types/cookies": "0.7.6",
+    "@types/js-cookie": "2.2.6",
     "@types/node": "14.14.44",
     "@types/react": "17.0.5",
     "@types/react-dom": "17.0.3",
+    "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "4.22.1",
     "@typescript-eslint/parser": "4.22.1",
     "eslint": "7.25.0",
@@ -46,6 +53,7 @@
     "eslint-plugin-react": "7.23.2",
     "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.2.1",
+    "prisma": "2.22.1",
     "typescript": "4.2.4"
   },
   "config": {
